#119 Shop page layout issue when more products

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2425,7 +2425,6 @@ div.wpcf7-response-output {
 	height: auto;
 }
 
-
 /* -------------------------------------------------------------------
 Footer
 ------------------------------------------------------------------- */
@@ -4417,7 +4416,8 @@ Responsive Media Querries
 	}
 
 	.copyright,
-	.footer-social-links {
+	.footer-social-links,
+	.shop-isle-poweredby-box {
 		text-align: center;
 		margin: 10px 0;
 	}
