--- a/inc/woocommerce/css/woocommerce.css
+++ b/inc/woocommerce/css/woocommerce.css
@@ -1422,8 +1422,9 @@ ul.products li.product {
 .shop-with-sidebar ul.products li.product {
 	width: 33.2%;
 }
-.shop-with-sidebar ul.products li.product:nth-child(3n+1) {
-    clear: left;
+
+.shop-with-sidebar ul.products li.product:nth-child(4n+1) {
+    clear: none;
 }
 
 ul.products li.product.last {
@@ -2264,6 +2265,9 @@ ul.products li.product:nth-child(4n+1) {
 }
 .shop-with-sidebar ul.products li.product:nth-child(4n+1) {
     clear: none;
+}
+.shop-with-sidebar ul.products li.product:nth-child(3n+1) {
+    clear: left;
 }
 h1.page-title {
 	margin-top: 0;
